# zhixue-companion

./: .gitignore  server.sh
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_auth.py  routes_chat.py  routes_learning_plans.py  routes_student_assignments.py  routes_summary.py  routes_teacher_assignments.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: analysis_report.py  assignment.py  chat.py  grade.py  learning_plan.py  submission.py  summary.py  user.py
backend/app/schemas/: auth.py  chat.py  learning_plan.py  student_assignment.py  summary.py  teacher_assignment.py
backend/app/services/: analyze_service.py  auth_service.py  chat_service.py  file_processor_client.py  grading_service.py  learning_plan_service.py  minimax_client.py  student_assignment_service.py  summary_service.py  teacher_assignment_service.py
backend/tests/: conftest.py  test_chat_service.py  test_learning_plan_service.py  test_quiz_grading.py  test_text_chunking.py  test_vector_utils.py
docs/: testing.md
